# arithmentic

./: CMakeLists.txt
include/arithmetic/: add.hpp
src/: add.cpp
test/: CMakeLists.txt
test/src/: test_add.cpp
